# espn-league54078-dashboard

./: .gitignore  .gitmodules  index.html  pyproject.toml  setup_environment.sh
docs/: index.html
docs/data/: draft_df.csv  espn_fantasy_api_all_players_info_df.csv  standings_points_df.csv  (+1 more)
html_dashboard_generator/: html_dashboard_generator.py
server_linux/: configs.sh  generate_data.sh  initialize_downloads_cache.sh  setup_server.sh  update_current_season_all.sh  update_current_season_data.sh
stats/: average_player_draft_position_notebook.py  bench_and_ir_points_lost_notebook.py  daily_points.py  daily_points_by_position_notebook.py  daily_points_notebook.py  draft_age_notebook.py  draft_birth_countries_notebook.py  draft_goon_stats_notebook.py  draft_player_points.py  draft_stats.py  man_games_lost_notebook.py  owner_draft_position_notebook.py  owner_num_times_draft_player_notebook.py  owner_num_times_draft_team_notebook.py  owner_same_picks_consecutive_seasons_notebook.py  player_contribution_analysis_notebook.py  player_points_contribution_vs_draft_number_notebook.py  player_with_different_owners.py  player_with_different_owners_notebook.py  player_with_most_hat_tricks_notebook.py  points_by_position.py  points_by_position_notebook.py  points_per_season_analysis_notebook.py  rankings_notebook.py  roster_change_stats.py  standings_points_stats.py
streamlit/: current_season_page.py  draft_player_points.py  draft_stats.py  owner_profiles_page.py  patch_notes_page.py  points_by_position.py  requirements.txt  season_dashboard_page.py  streamlit_app.py
