[project]
name = "espn-league54078-dashboard"
version = "0.1.0"
description = "ESPN League 54078 Dashboard"
readme = "README.md"
requires-python = "==3.8.20"
dependencies = [
    "espn-league54078-fantasy-stats",
]

[tool.uv.workspace]
members = [
    "espn_league54078_fantasy_stats",
]

[tool.uv.sources]
espn-league54078-fantasy-stats = { workspace = true, editable = true }
