[project]
name = "espn-league54078-dashboard"
version = "0.1.0"
description = "ESPN League 54078 Dashboard"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "espn-league54078-fantasy-stats",
    "ipykernel==7.1.0",
    "nbformat==5.3.0",
    "pyarrow==20.0.0",
    "streamlit==1.51.0",
]

[tool.uv.sources]
espn-league54078-fantasy-stats = { path = "./espn_league54078_fantasy_stats", editable = true }

[tool.uv]
package = true

[tool.setuptools]
packages = ["stats"]